--- a/app/src/index.css
+++ b/app/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.info{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 4px 4px;
+  grid-template-areas: ". . . . ." ". . . . ." ". . . . ." ". . . . .";
+}
