--- a/app/src/index.css
+++ b/app/src/index.css
@@ -19,3 +19,10 @@ code {
   gap: 4px 4px;
   grid-template-areas: ". . . . ." ". . . . ." ". . . . ." ". . . . .";
 }
+
+.pokemon {
+  background-color: yellow;
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid black;
+}
