--- a/app/src/index.css
+++ b/app/src/index.css
@@ -21,8 +21,14 @@ code {
 }
 
 .pokemon {
-  background-color: yellow;
+  background-color: black;
   padding: 20px;
   margin: 10px;
-  border: 2px solid black;
+  border: 2px solid yellow;
+}
+
+.pokemon p {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: yellow;
 }
