--- a/app/src/index.css
+++ b/app/src/index.css
@@ -21,14 +21,21 @@ code {
 }
 
 .pokemon {
-  background-color: black;
+  background-color: #BA0C11;
   padding: 20px;
   margin: 10px;
-  border: 2px solid yellow;
+  border: 3px solid #860009;
+  border-radius: 20px;
 }
 
 .pokemon p {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  color: yellow;
+  color: #75E647;
+}
+
+.pokemon img {
+  background-color: #AAAAAA;
+  padding: 20px;
+  border-radius: 30px;
 }
